--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   conditional_builder_null_safety: ^0.0.6
   intl: ^0.17.0
   syncfusion_flutter_gauges: ^20.2.48
+  geolocator: ^9.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
