--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   intl: ^0.17.0
   syncfusion_flutter_gauges: ^20.2.48
   geolocator: ^9.0.1
+  geocoding: ^2.0.5
+  awesome_dialog: ^3.0.1
+  flutter_zoom_drawer: ^3.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
